deploy/k8s/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openapi-mocker
  namespace: openapi-mocker
spec:
  selector:
    app: openapi-mocker
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
